--- a/starter/index.html
+++ b/starter/index.html
@@ -1,15 +1,20 @@
+<!-- Horiseon Website -->
 <!DOCTYPE html>
 <html lang="en-gb">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    
+<!--Tab Title -->
     <title>Welcome to Horiseon</title>
 </head>
 
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+
+<!-- Navigation -->
         <div>
             <ul>
                 <li>
@@ -24,10 +29,14 @@
             </ul>
         </div>
     </div>
+
+<!-- Hero Section -->
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+
+<!-- SEO Content Section -->
+        <div id="search-engine-optimization" class="search-engine-optimization">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization" class="float-left">
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -36,7 +45,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management" class="float-right">
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -45,7 +54,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing" class="float-left">
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -57,7 +66,7 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="lead-generation">
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -65,7 +74,7 @@
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="brand-awareness">
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
