updated HTML and CSS files

--- a/starter/index.html
+++ b/starter/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <section>
-    <div class="header">
+    <nav class="header">
         <!-- Headers -->
         <h1>Hori<span class="seo">seo</span>n</h1>
+    </header>
 
         <!-- Navigation -->
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -28,8 +28,9 @@
                     <a href="#social-media-marketing">Social Media Marketing!</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+     </nav>  
+    
 
     <!-- Hero Section -->
     <div class="hero"></div>
@@ -95,6 +96,7 @@
         </div>
     </div>
    
+
     <!-- Footer -->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
