updated css and html

--- a/starter/index.html
+++ b/starter/index.html
@@ -5,17 +5,17 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <!-- Tab Title -->
+    <!-- Tab Title element -->
     <title>Welcome to Horiseon</title>
 </head>
 
 <body>
     <nav class="header">
-        <!-- Headers -->
+        <!-- Header elements -->
         <h1>Hori<span class="seo">seo</span>n</h1>
     </header>
 
-        <!-- Navigation -->
+        <!-- Navigation elements -->
         <nav>
             <ul>
                 <li>
